--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Utilize nosso sistema!</h2>
-                <a class="btn btn-light btn-xl" href="./signup/" target="_blank">Cadastre-se Agora!</a>
+                <a class="btn btn-light btn-xl" href="#page-top">Cadastre-se Agora!</a>
             </div>
         </section>
         <!-- Contact-->
