--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Serviços</a></li>
                        
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contato</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#page-top">Login</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#">Login</a></li>
                     </ul>
                 </div>
             </div>
